# RUHacks

./: .gitignore  .gitmodules  Cargo.toml  CommandsWriteup  Rocket.toml
src/: auth.rs  crypt.rs  main.rs
