[package]
name = "RUHacks-2020"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.4.4", default-features=false}
mongodb = "0.10.0"
sha2 = "0.8.1"
rand = "0.7.3"
serde = "1.0.110"
serde_json = "1.0.53"
base64 = "0.12.1"